--- a/app/src/main/res/layout/activity_job_scheduler.xml
+++ b/app/src/main/res/layout/activity_job_scheduler.xml
@@ -14,8 +14,17 @@
             android:id="@+id/jobSchedulerActivity_notificationEvery30s"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Show Notification between 10 and 30s"
+            android:text="Show Notification between 3 and 15s"
             android:onClick="showNotificationEvery30s"/>
+
+        <Button
+            android:id="@+id/jobSchedulerActivity_notificationOnCharge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Show Notification onCharge"
+            android:onClick="showNotification30sAfterCharge"/>
+
+
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
